--- a/web_app/templates/about.html
+++ b/web_app/templates/about.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    <h1>About Me</h1>
+    <h1>About Me, Nathan</h1>
 
     <p>This is a paragraph on the "about" page.</p>
 
