--- a/web_app/templates/about.html
+++ b/web_app/templates/about.html
@@ -1,8 +1,9 @@
-{% extends "layout.html" %}
+{% extends "bootstrap_5_layout.html" %}
+{% set active_page = "about" %}
 
 {% block content %}
 
-    <h1>About Me, Nathan</h1>
+    <h1>About Me</h1>
 
     <p>This is a paragraph on the "about" page.</p>
 
